--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~42.0.0",
+    "firebase": "8.2.3",
+    "lottie-react-native": "^4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
